feat: Refactor HomeScreen and SettingsPage for improved navigation and settings management
- Updated HomeScreen to use a PageView for navigation between Home, History, and Settings pages.
- Introduced FocusNode for better focus management in HomeScreen.
- Enhanced SettingsPage to load and display user settings including language and country code.
- Added functionality to toggle dark mode and save recent numbers in SettingsPage.
- Implemented a new ClipboardContainer widget for displaying clipboard contacts.
- Created a CustomTooltip widget for enhanced user interaction feedback.
- Integrated Bloc for managing chat history state with ChatHistoryCubit.
- Added support for country selection using country_picker package.
- Updated UI components for better styling and user experience.
- Added new dependencies in pubspec.yaml for state management and URL launching.

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,3 +1,6 @@
 {
-  "ziad": "ziad"
+  "ziad": "ziad",
+  "enter_phone_number": "Enter Phone Number",
+  "clipboard_content": "Clipboard Content",
+  "failed_to_read_clipboard": "Failed to read clipboard"
 }
