--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -1,3 +1,6 @@
 {
-  "ziad": "زياد"
+  "ziad": "زياد",
+  "enter_phone_number": "ادخل رقم الهاتف",
+  "clipboard_content": "الحافظة ",
+  "failed_to_read_clipboard": "فشل قراءة الحافظة"
 }
