Refactor code structure for improved readability and maintainability

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -1,6 +1,49 @@
 {
-  "ziad": "زياد",
   "enter_phone_number": "ادخل رقم الهاتف",
-  "clipboard_content": "الحافظة ",
-  "failed_to_read_clipboard": "فشل قراءة الحافظة"
+  "clipboard_content": "تم العثور على رقم في الحافظة",
+  "failed_to_read_clipboard": "حدث خطأ أثناء قراءة الحافظة",
+  "invalid_phone_number": "رقم الهاتف غير صالح",
+  "no_phone_found": "لم يتم العثور على رقم",
+  "no_phone_found_desc": "لم يتم اكتشاف أي رقم هاتف صالح في الصورة.",
+  "ok": "حسناً",
+  "detected_phone": "تم اكتشاف رقم",
+  "edit": "تعديل",
+  "chat": "دردشة",
+  "chat_history": "سجل الدردشة",
+  "delete": "حذف",
+  "chat_deleted": "تم حذف الدردشة",
+  "no_chat_history": "لا يوجد سجل دردشة",
+  "confirm_deletion": "تأكيد الحذف",
+  "confirm_delete_warning": "هل أنت متأكد أنك تريد حذف سجل الدردشة بالكامل؟ هذا الإجراء لا يمكن التراجع عنه.",
+  "cancel": "إلغاء",
+  "yes_delete": "نعم، احذف",
+  "language": "اللغة",
+  "select_language": "اختر اللغة",
+  "english": "الإنجليزية",
+  "arabic": "العربية",
+  "country_code": "رمز الدولة",
+  "select_country_code": "اختر رمز الدولة",
+  "preferences": "التفضيلات",
+  "dark_mode": "الوضع الليلي",
+  "save_recent_numbers": "حفظ الأرقام الأخيرة",
+  "chat_started": "تم بدء المحادثة",
+  "whatsapp_launch_failed": "فشل في فتح واتساب",
+  "long_press_to_edit": "اضغط مطولاً للتعديل",
+  "start_chat": "ابدأ المحادثة",
+  "clipboard": "الحافظة",
+  "message_hint_optional": "اكتب رسالتك (اختياري)",
+  "hint_phone_number": "رقم الهاتف",
+  "no_message": "لا توجد رسالة",
+  "message_prefix": "الرسالة:",
+  "error_invalid_phone": "رقم الهاتف غير صالح",
+  "recent_numbers": "الأرقام الحديثة",
+  "view_all": "عرض الكل",
+  "home": "الصفحة الرئيسية",
+  "history": "السجل",
+  "settings": "الاعدادات",
+  "saved_message": "الرسالة المحفوظة",
+  "enter_message": "أدخل رسالتك",
+  "saved_message_hint": "هذه رسالة يمكنك إدراجها يدويًا أثناء الدردشة بالضغط على أيقونة الرسائل.",
+  "saved_message_empty": "لا توجد رسالة محفوظة. قم بتحديدها من الإعدادات.",
+  "message_added": "تمت إضافة الرسالة المحفوظة"
 }
