--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,6 +1,49 @@
 {
-  "ziad": "ziad",
   "enter_phone_number": "Enter Phone Number",
-  "clipboard_content": "Clipboard Content",
-  "failed_to_read_clipboard": "Failed to read clipboard"
+  "clipboard_content": "Phone number found in clipboard",
+  "failed_to_read_clipboard": "An error occurred while reading the clipboard",
+  "invalid_phone_number": "Invalid phone number",
+  "no_phone_found": "No Phone Found",
+  "no_phone_found_desc": "No valid phone number was detected in the image.",
+  "ok": "OK",
+  "detected_phone": "Detected Phone",
+  "edit": "Edit",
+  "chat": "Chat",
+  "chat_history": "Chat History",
+  "delete": "Delete",
+  "chat_deleted": "Chat Deleted",
+  "no_chat_history": "No Chat History",
+  "confirm_deletion": "Confirm Deletion",
+  "confirm_delete_warning": "Are you sure you want to delete all chat history? This action cannot be undone.",
+  "cancel": "Cancel",
+  "yes_delete": "Yes, Delete",
+  "language": "Language",
+  "select_language": "Select Language",
+  "english": "English",
+  "arabic": "Arabic",
+  "country_code": "Country Code",
+  "select_country_code": "Select country code",
+  "preferences": "Preferences",
+  "dark_mode": "Dark Mode",
+  "save_recent_numbers": "Save Recent Numbers",
+  "chat_started": "Chat started",
+  "whatsapp_launch_failed": "Failed to launch WhatsApp",
+  "long_press_to_edit": "Long press to edit",
+  "start_chat": "Start Chat",
+  "clipboard": "Clipboard",
+  "message_hint_optional": "Enter your message (optional)",
+  "hint_phone_number": "Phone Number",
+  "no_message": "No Message",
+  "message_prefix": "Message:",
+  "error_invalid_phone": "Invalid Phone Number",
+  "recent_numbers": "Recent Numbers",
+  "view_all": "View All",
+  "home": "Home",
+  "history": "History",
+  "settings": "Settings",
+  "saved_message": "Saved Message",
+  "enter_message": "Enter your message",
+  "saved_message_hint": "This is a message you can insert manually when chatting by tapping the message icon.",
+  "saved_message_empty": "No saved message found. Set it in Settings.",
+  "message_added": "Saved message added"
 }
