feat: Enhance app sharing and rating features; update localization and remove AboutScreen

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -45,5 +45,13 @@
   "enter_message": "أدخل رسالتك",
   "saved_message_hint": "هذه رسالة يمكنك إدراجها يدويًا أثناء الدردشة بالضغط على أيقونة الرسائل.",
   "saved_message_empty": "لا توجد رسالة محفوظة. قم بتحديدها من الإعدادات.",
-  "message_added": "تمت إضافة الرسالة المحفوظة"
+  "message_added": "تمت إضافة الرسالة المحفوظة",
+  "share_app": "مشاركة التطبيق",
+  "rate_app": "قيّم التطبيق",
+  "share_app_subtitle": "انسخ رابط التطبيق للمشاركة",
+  "rate_app_subtitle": "قيّم التطبيق على متجر بلاي",
+  "app_share_message": "جرّب هذا التطبيق الرائع: ",
+  "bottom_sheet_title": "هل أعجبك التطبيق؟",
+  "bottom_sheet_description": "ساعدنا على الانتشار بالمشاركة والتقييم!",
+  "app_link_copied": "تم نسح رابط التطبيق"
 }
